--- a/ReHouse.FrontEnd/Content/mobile.css
+++ b/ReHouse.FrontEnd/Content/mobile.css
@@ -323,6 +323,9 @@
 
 
 @media(max-width:768px) {
+    .form-search input[type="submit"] {
+    margin-top: 0px;
+}
    .contactinfo .number div a[href^=tel] {
        color:#fff!important;
     text-decoration: none;
