--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -181,7 +181,7 @@
                 {
                     if (slide.IsVideo)
                     {                        
-                        <a class="video" href="@slide.Url" data-autovideo="1">
+                        <a class="video" href="@slide.VideoUrl" data-autovideo="1">
                             @if (!String.IsNullOrEmpty(slide.Url))
                             {
                                 <b data-src="@Url.Content(slide.Url)"></b>
