--- a/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
@@ -465,11 +465,11 @@
         ga('send', 'pageview');
     </script>*@
 
-    @if (ViewBag.Feedbacks != null && ViewBag.Feedbacks.Count > 0)
+    @if (ViewBag.AdminFeedbacks != null && ViewBag.AdminFeedbacks.Count > 0)
     {
         <script type="text/javascript">
             $(function () {
-                var list = [], count = @ViewBag.Feedbacks.Count;
+                var list = [], count = @ViewBag.AdminFeedbacks.Count;
                 for(var i = 1; i<= count; i++) {
                     list.push(".f" + i);
                 }
