--- a/ReHouse.FrontEnd/Scripts/js-image-slider.css
+++ b/ReHouse.FrontEnd/Scripts/js-image-slider.css
@@ -111,6 +111,7 @@ element.style {
 #slider, #slider .sliderInner {
     width:100%;height:702px;/* Must be the same size as the slider images */
     border-radius: 6px;
+        min-width: 1200px;
 }
 
 #slider {
@@ -148,12 +149,16 @@ element.style {
 /* each bullet */
 #slider .navBulletsWrapper div 
 {
-    width:11px; height:11px;
-    font-size:0;color:White;/*hide the index number in the bullet element*/
-    background:transparent url('../Scripts/bullet.png') no-repeat 0 0;
-    display:inline-block; *display:inline; zoom:1;
-    overflow:hidden;cursor:pointer;
-    margin:0 6px;/* set distance between each bullet*/
+        width: 11px;
+    height: 11px;
+    font-size: 0;
+    color: White;
+    background: transparent url(../Scripts/bullet.png) no-repeat 0 0;
+    display: inline-block;
+    zoom: 1;
+    overflow: hidden;
+    cursor: pointer;
+    margin: 0 6px;
 }
 
 #slider .navBulletsWrapper .active {background-position:0 -11px;}
